# site_checker

./: .gitignore  README.md  configure.py  pyproject.toml  run.py
parsers/: div_attribute_json.py
site_checker/: alert_window.py  dat_session_handler.py  gui.py  main.py  project.py  project_fetcher.py  project_page_parser.py  project_parser.py
tests/: .gitignore
